--- a/ml.html
+++ b/ml.html
@@ -330,8 +330,14 @@
   <section class="page-section bg-light" id="slides">
       <div id="myCarousel" class="carousel slide container" data-interval="false">
           <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active" style="background-color:#6c757d">test</li>
-              <li data-target="#myCarousel" data-slide-to="1" style="background-color:#6c757d"></li>
+              <li data-target="#myCarousel" data-slide-to="0" class="active" style="background-color:#6c757d">Was ist ML?</li>
+              <li data-target="#myCarousel" data-slide-to="1" style="background-color:#6c757d">Fitting</li>
+              <li data-target="#myCarousel" data-slide-to="2" style="background-color:#6c757d">Vorhersage</li>
+              <li data-target="#myCarousel" data-slide-to="3" style="background-color:#6c757d">Optimisierung</li>
+              <li data-target="#myCarousel" data-slide-to="4" style="background-color:#6c757d">Unsupervised learning</li>
+              <li data-target="#myCarousel" data-slide-to="5" style="background-color:#6c757d">Features</li>
+              <li data-target="#myCarousel" data-slide-to="6" style="background-color:#6c757d">Models</li>
+              <li data-target="#myCarousel" data-slide-to="7" style="background-color:#6c757d">Ausblick</li>
           </ol>
           <div class="carousel-inner col-lg-12 text-center" style="padding-bottom:100px;font-size:1em">
              <div class="carousel-item active">
