--- a/ml.html
+++ b/ml.html
@@ -104,33 +104,37 @@
             </div>
             <div class="col-sm-12">
               <h1 class="course-title text-uppercase" style="color:white">Maschinelles Lernen mit R</h1>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12" align="left">
-          <div class="row flex-nowrap">
-            <div class="col-1">
-              <img class="bullet" src="../img/sticker2.png">
-            </div>
-            <div class="col-11">
-              <h1 class="usp">ML ermöglicht bahnbrechende Entwicklungen in Wirtschafts und Forschung.</h1>
-            </div>
-          </div>
-          <div class="row flex-nowrap">
-            <div class="col-1">
-              <img class="bullet" src="../img/sticker2.png">
-            </div>
-            <div class="col-11" align="left">
-              <h1 class="usp">Lerne in 2 Tagen was Du wissen musst um mit R ML auf Deine Daten anzuwenden.</h1>
+              <h3 class="usp" style="color:white;font-weight:100">Entwickle akkurate, datenbasierte Vorhersagen und identifiziere versteckte Muster in Daten.</h3>
             </div>
           </div>
         </div>
       </div>
       <div style="padding:10%">
-      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Anmelden</a>
+      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact" style="line-height:1">Anmelden<br><font style="font-weight:100;font-size:.8em">Oktober 23/24</font></a>
       </div>
     </div>
   </header>
+
+<!---
+<div class="col-sm-12" align="left">
+  <div class="row flex-nowrap">
+    <div class="col-1">
+      <img class="bullet" src="../img/sticker2.png">
+    </div>
+    <div class="col-11">
+      <h1 class="usp">ML ermöglicht bahnbrechende Entwicklungen in Wirtschafts und Forschung.</h1>
+    </div>
+  </div>
+  <div class="row flex-nowrap">
+    <div class="col-1">
+      <img class="bullet" src="../img/sticker2.png">
+    </div>
+    <div class="col-11" align="left">
+      <h1 class="usp">Lerne in 2 Tagen was Du wissen musst um mit R ML auf Deine Daten anzuwenden.</h1>
+    </div>
+  </div>
+</div>
+--->
 
   <!-- Services -->
   <section class="page-section bg-light" id="facts">
@@ -145,7 +149,7 @@
               </span>
             </div>
             <div class="col-8">
-              <h4 class="icon"><b>Kleine Gruppen</b><br> bis maximal 14 Teilnehmer</h4>
+              <h4 class="icon"><b>Kleine Gruppen</b><br> bis max. 14 Teilnehmer</h4>
             </div>
           </div>
           <div class="row flex-nowrap icon-row">
@@ -334,7 +338,7 @@
               <li data-target="#myCarousel" data-slide-to="1" style="background-color:#6c757d">Fitting</li>
               <li data-target="#myCarousel" data-slide-to="2" style="background-color:#6c757d">Vorhersage</li>
               <li data-target="#myCarousel" data-slide-to="3" style="background-color:#6c757d">Optimisierung</li>
-              <li data-target="#myCarousel" data-slide-to="4" style="background-color:#6c757d">Unsupervised learning</li>
+              <li data-target="#myCarousel" data-slide-to="4" style="background-color:#6c757d">Unüberw. Lernen</li>
               <li data-target="#myCarousel" data-slide-to="5" style="background-color:#6c757d">Features</li>
               <li data-target="#myCarousel" data-slide-to="6" style="background-color:#6c757d">Models</li>
               <li data-target="#myCarousel" data-slide-to="7" style="background-color:#6c757d">Ausblick</li>
@@ -350,7 +354,7 @@
                  </div>
                  <div class="col-lg-3">
                    <p class="content">
-                     <h4 align="left">Konzepte</h4>
+                     <h4 align="left">Präsentation (60min)</h4>
                      <ol class="concepts" align="left">
                        <li>Maschinelles Lernen versus Statistik</li>
                        <li>Algorithmen versus Intuition</li>
@@ -387,59 +391,79 @@
       </div>
     </section>
 
-    <!-- Services -->
-    <section class="page-section" id="practicals">
-        <div id="myCarousel2" class="carousel slide container" data-interval="false">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel2" data-slide-to="0" class="active" style="background-color:#6c757d">Fitting</li>
-                <li data-target="#myCarousel2" data-slide-to="1" style="background-color:#6c757d">Prediction</li>
-            </ol>
-            <div class="carousel-inner col-lg-12 text-center" style="padding-bottom:100px;font-size:1em">
-               <div class="carousel-item active">
-                 <div class="row">
-                   <div class="col-lg-9">
-                     <span class="slide-instruct">Klicke auf die Folien. Verwende dann <b>&larr;</b> und <b>&rarr;</b>.</span><br>
-                     <div class="slides">
-                     <iframe src="https://therbootcamp.github.io/ML_2020Apr/_sessions/Fitting/Fitting_practical.html"></iframe>
-                   </div>
-                   </div>
-                   <div class="col-lg-3">
-                     <p class="content">
-                       <h4 align="left">Konzepte</h4>
-                       <ol class="concepts" align="left">
-                         <li>Maschinelles Lernen versus Statistik</li>
-                         <li>Algorithmen versus Intuition</li>
-                         <li>Arten des maschinellen Lernens</li>
-                         <li>Der datenalytische Prozess</li>
-                       </ol>
-                     </p>
-                   </div>
+  <!-- Services -->
+  <section class="page-section" id="practicals">
+      <div id="myCarousel2" class="carousel slide container" data-interval="false">
+          <ol class="carousel-indicators">
+              <li data-target="#myCarousel2" data-slide-to="0" class="active" style="background-color:#6c757d">Fitting</li>
+              <li data-target="#myCarousel2" data-slide-to="1" style="background-color:#6c757d">Prediction</li>
+          </ol>
+          <div class="carousel-inner col-lg-12 text-center" style="padding-bottom:100px;font-size:1em">
+             <div class="carousel-item active">
+               <div class="row">
+                 <div class="col-lg-9">
+                   <span class="slide-instruct">Klicke auf die Folien. Verwende dann <b>&larr;</b> und <b>&rarr;</b>.</span><br>
+                   <div class="slides">
+                   <iframe src="https://therbootcamp.github.io/ML_2020Apr/_sessions/Fitting/Fitting_practical.html"></iframe>
+                 </div>
+                 </div>
+                 <div class="col-lg-3">
+                   <p class="content">
+                     <h4 align="left">Übung (90min)</h4>
+                     <ol class="concepts" align="left">
+                       <li>Maschinelles Lernen versus Statistik</li>
+                       <li>Algorithmen versus Intuition</li>
+                       <li>Arten des maschinellen Lernens</li>
+                       <li>Der datenalytische Prozess</li>
+                     </ol>
+                   </p>
                  </div>
                </div>
-                <div class="carousel-item">
-                  <div class="row">
-                    <div class="col-lg-9">
-                      <span class="slide-instruct">Klicke auf die Seite. Verwende dann <b>&uarr;</b> und <b>&darr;</b>.</span><br>
-                      <div class="slides">
-                      <iframe src="https://therbootcamp.github.io/ML_2020Apr/_sessions/Prediction/Prediction_practical.html"></iframe>
-                    </div>
-                    </div>
-                    <div class="col-lg-3">
-                      <p class="content">
-                        <h4 align="left">Konzepte</h4>
-                        <ol class="concepts text-muted" align="left">
-                          <li>Maschinelles Lernen versus Statistik</li>
-                          <li>Algorithmen versus Intuition</li>
-                          <li>Arten des maschinellen Lernens</li>
-                          <li>Der datenalytische Prozess</li>
-                        </ol>
-                      </p>
-                    </div>
+             </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-lg-9">
+                    <span class="slide-instruct">Klicke auf die Seite. Verwende dann <b>&uarr;</b> und <b>&darr;</b>.</span><br>
+                    <div class="slides">
+                    <iframe src="https://therbootcamp.github.io/ML_2020Apr/_sessions/Prediction/Prediction_practical.html"></iframe>
+                  </div>
+                  </div>
+                  <div class="col-lg-3">
+                    <p class="content">
+                      <h4 align="left">Konzepte</h4>
+                      <ol class="concepts text-muted" align="left">
+                        <li>Maschinelles Lernen versus Statistik</li>
+                        <li>Algorithmen versus Intuition</li>
+                        <li>Arten des maschinellen Lernens</li>
+                        <li>Der datenalytische Prozess</li>
+                      </ol>
+                    </p>
                   </div>
                 </div>
-            </div>
+              </div>
           </div>
-      </section>
+        </div>
+    </section>
+
+    <!-- Services -->
+    <section class="page-section bg-light" id="trainer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/team/1.png" style="border-radius:100%;width:200px;height:200px"></img>
+          </div>
+          <div class="col-md-4">
+            <h1>Dozent</h1>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- Contact --->
   <section class="page-section" id="contact" style="background-size:cover;background-image:url(../img/hands.png)">
