--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 
 
 
-  <!-- MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS -->
+  <!-- MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS
   <div class="team-modal modal fade" id="markus" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -760,7 +760,6 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/team/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">MSc Markus Steiner</h4>
                 <p class="text-muted" style="margin-bottom:10px">Ausbilder @ Basel</p>
@@ -797,6 +796,7 @@
       </div>
     </div>
   </div>
+   -->
 
   <!-- MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL -->
   <div class="team-modal modal fade" id="michael" tabindex="-1" role="dialog" aria-hidden="true">
