--- a/index.html
+++ b/index.html
@@ -1765,6 +1765,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Aug/">August 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Mar/">März 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Feb/">Februar 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">November 2019 | 1/2 Tag</a><br>
@@ -1774,6 +1775,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Sep/">September 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2 Tage</a><br>
