--- a/index.html
+++ b/index.html
@@ -1787,6 +1787,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">Statistik mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2020Sep/">September 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2020Mai/">Mai 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2 Tage</a><br>
 
