--- a/index.html
+++ b/index.html
@@ -1765,6 +1765,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Oct/">Oktober 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Aug/">August 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Mar/">März 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Feb/">Februar 2020 | 1/2 Tag</a><br>
@@ -1796,10 +1797,10 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
                 <h4  style="padding:0px;margin:0px">Maschinelles Lernen mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Lerne mit R prädiktive Algorithmen zu erstellen</p>
-
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2020Oct/">Oktober 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2020Apr/">April 2020 | 2 Tage</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">October 2019 | 2 Tage</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">Oktober 2019 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">Mai 2019 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2 Tage</a><br>
 
                 <br><br><br>
