--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     var ml_text = "DE | Okt tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung"
     var ml_font = "lighter";
-    var rep_text = "DE | Nov 13/14 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var rep_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var rep_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-webinar-283873#collapsible-heading-anmeldung"
-    var rep_font = "bolder";
+    var rep_font = "lighter";
 
     // running link
     var run_link = "https://therbootcamp.github.io/RmR_2020Jun/"
