--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     var i2r_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung"
     var i2r_font = "bolder"; //lighter
     var i2r_2nd_text = "DE | Apr 2 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_2nd_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 2. April, 2021, anmelden."
+    var i2r_2nd_link = "mailto:therbootcamp@gmail.com?subject=Anmelden für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 2. April, 2021, anmelden."
     var i2r_2nd_font = "bolder"; //lighter
     var expl_text = "DE | Mar 19/20 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung"
@@ -2012,10 +2012,6 @@
     i2r.innerHTML = i2r2.innerHTML = i2r_text;
     i2r.href = i2r2.href = i2r_link;
     i2r.style.fontWeight = i2r2.style.fontWeight = i2r_font;
-    var ir_no2 = document.getElementById("i2r_no2");
-    i2r.innerHTML = i2r_no2_text;
-    i2r.href = i2r_no2_link;
-    i2r.style.fontWeight = i2r_no2_font;
     var expl = document.getElementById("expl");
     var expl2 = document.getElementById("expl2");
     expl.innerHTML = expl2.innerHTML = expl_text;
@@ -2036,6 +2032,10 @@
     rep.innerHTML = rep2.innerHTML = rep_text;
     rep.href = rep2.href = rep_link;
     rep.style.fontWeight = rep2.style.fontWeight = rep_font;
+    var ir_no2 = document.getElementById("i2r_no2");
+    i2r.innerHTML = i2r_no2_text;
+    i2r.href = i2r_no2_link;
+    i2r.style.fontWeight = i2r_no2_font;
 
     // running link
     document.getElementById("run").style = run_style;
