--- a/index.html
+++ b/index.html
@@ -2033,9 +2033,9 @@
     rep.href = rep2.href = rep_link;
     rep.style.fontWeight = rep2.style.fontWeight = rep_font;
     var ir_no2 = document.getElementById("i2r_no2");
-    i2r.innerHTML = i2r_no2_text;
-    i2r.href = i2r_no2_link;
-    i2r.style.fontWeight = i2r_no2_font;
+    ir_no2.innerHTML = i2r_no2_text;
+    ir_no2.href = i2r_no2_link;
+    ir_no2.style.fontWeight = i2r_no2_font;
 
     // running link
     document.getElementById("run").style = run_style;
