--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     //var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden."
     //DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>
     //mailto:therbootcamp@gmail.com?subject=Voranmeldug für Reporting mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Reporting mit R' voranmelden.
-    var i2r_no2_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_no2_link = ""
-    var i2r_no2_font = "lighter"; //lighter
-    var i2r_text = "DE | Mär 31 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_link = "mailto:therbootcamp@gmail.com?subject=Anmelden für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 31. März, 2021, anmelden."
-    var i2r_font = "bolder"; //lighter
+    var i2r_no2_text = "DE | Mär 31 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_no2_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
+    var i2r_no2_font = "bolder"; //lighter
+    var i2r_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Herbst, 2021, voranmelden."
+    var i2r_font = "lighter"; //lighter
     var expl_text = "DE | Mar 19/20 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung"
     var expl_font = "bolder";
@@ -23,7 +23,7 @@
     var ml_text = "DE | Mai 14/15 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung"
     var ml_font = "bolder";
-    var rep_text = "DE | Feb 26/27 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var rep_text = "DE | Jun 25/26 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var rep_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-webinar-283873#collapsible-heading-anmeldung"
     var rep_font = "bolder";
 
@@ -1813,7 +1813,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/4.png" alt="">
                 <h4  style="padding:0px;margin:0px">Reporting mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Lernen Sie dynamische, interaktive Berichte mit R zu erstellen.</p>
-
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/RmR_2021Feb/">Februar 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/RmR_2020Jun/">Juni 2020 | 2 Tage</a><br>
 
                 <br><br>
