--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     var i2r_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Herbst, 2021, voranmelden."
     var i2r_font = "lighter"; //lighter
-    var expl_text = "DE | Mar 19/20 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung"
-    var expl_font = "bolder";
+    var expl_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Herbst, 2021, voranmelden."
+    var expl_font = "lighter";
     var stat_text = "DE | Apr 16/17 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung"
     var stat_font = "bolder";
@@ -1769,6 +1769,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Mar/">März 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Feb/">Februar 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Oct/">Oktober 2020 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Aug/">August 2020 | 1/2 Tag</a><br>
@@ -1781,6 +1782,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2021Mar/">März 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Sep/">September 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2 Tage</a><br>
