--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     var ml_text = "DE | Nov 19/20 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung"
     var ml_font = "bolder";
-    var rep_text = "DE | Jun 25/26 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var rep_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-webinar-283873#collapsible-heading-anmeldung"
-    var rep_font = "bolder";
+    var rep_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var rep_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Reporting mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Reporting mit R' voranmelden."
+    var rep_font = "ligher";
 
     // running link
     var run_link = "https://therbootcamp.github.io/RmR_2020Jun/"
