--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     var ml_font = "bolder";
     var rep_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var rep_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Reporting mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Reporting mit R' voranmelden."
-    var rep_font = "ligher";
+    var rep_font = "lighter";
 
     // running link
     var run_link = "https://therbootcamp.github.io/RmR_2020Jun/"
